--- a/ajax_forms/templates/ajax_forms/main.html
+++ b/ajax_forms/templates/ajax_forms/main.html
@@ -1,5 +1,17 @@
 {% extends "ajax_forms/index.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
-    hello world
+    <div class="mt-3">
+        <div id="alert-box">
+            
+        </div>
+        <div id="img-box">
+        
+        </div>
+        <form id="p-form" autocomplete="off">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-outline-primary">Send</button>
+        </form>
+    </div>
 {% endblock content %}
